# rust-embedded-template

./: .gitignore  Cargo.toml  LICENSE.md  README.md  cargo-generate.toml
.cargo/: config.toml
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs
crates/boot/: Cargo.toml  build.rs  memory.x
crates/boot/src/: main.rs
crates/bsp/: Cargo.toml  build.rs  memory.x
crates/bsp/src/: lib.rs
crates/logic/: Cargo.toml
crates/logic/src/: lib.rs
