[package]
name = "boot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "boot"
harness = false

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
embassy-boot = { version = "*", features = ["defmt"] }
embassy-boot-stm32 = { version = "*", features = ["defmt"] }
embassy-stm32 = { workspace = true, features = ["defmt"] }